# vocab-vault

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fix.txt  fly.toml
.github/workflows/: publish.yml  rust.yml
Whitakers-Words-Data/: UNIQUES.LAT  dict-line-converter.py  unique-words-converter.py
Whitakers-Words-Data/converters/: dict-line-converter.py  good-json.py  unique-words-converter.py
src/: cli.rs  english_to_latin.rs  latin_to_english.rs  main.rs
src/data/: data.rs  latin_addons.json  latin_not_packons.json  latin_packons.json  latin_prefixes.json  latin_suffixes.json  latin_tackons.json  optimizeData.py  unique_latin_words.json
src/dictionary/: latin_inflections.json  latin_not_packons.json  latin_suffixes.json  latin_tickons.json
src/dictionary_structures/: dictionary_keys.rs  dictionary_values.rs  mod.rs
src/formatter/: formatter.rs  key_translator.rs  prettify_output.rs  principle_part_generator.rs  type_translator.rs
src/translators/: mod.rs
src/translators/english_to_latin/: mod.rs  utils.rs
src/translators/latin_to_english/: mod.rs  parser.rs  translator.rs  utils.rs
src/tricks/: trick_list.rs  tricks.rs  word_mods.rs
src/use_data/: mod.rs  utils.rs
src/use_data/parsers/: attachment_parser.rs  english_dictionary_parser.rs  (+5 more)
src/utils/: data.rs  filter.rs  formatter.rs  key_translator.rs  macron_generator.rs  mod.rs  post_processing.rs  post_processor.rs  principle_part_generator.rs  sorter.rs  tricks.rs  type_translator.rs
wiki/: dictionary-data-structure.md  dictionary-keys.md  output-structure.md
(+13 files in other folders)
